--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ pycparser==2.21
 pydantic==2.2.1
 pydantic_core==2.6.1
 PyJWT==2.8.0
-pytest==6.2.5
+pytest~=8.1.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
@@ -77,3 +77,4 @@ websockets==10.4
 Werkzeug==3.0.1
 zipp==3.16.2
 pytest-mock~=3.12.0
+lorem~=0.1.1
