--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,13 @@
 		"@fortawesome/free-regular-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/vue-fontawesome": "^3.0.8",
+		"@pinia/colada": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@vueuse/core": "^11.2.0",
 		"axios": "^1.6.0",
 		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
-		"pdap-design-system": "^3.1.0-beta.36",
+		"pdap-design-system": "^3.1.0-beta.37",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
 		"vue": "^3.4.19",
